# isoline

./: .gitignore  .windsurfrules  CLAUDE.md  README.md  pyproject.toml  run.py  run_isoline.py  setup.py  test_map.mdmap
docs/: Isometric Tiles Math.md  isometric-projection-in-games.md  performance-recommendations-critique.md  performance-recommendations.md  performance_whitepaper.md  tile-renderer.md  vbo-recommendations.md
docs/mdmap/: example.mdmap  mdmap.md
isoline/: __init__.py  grass.mdmap  main.py  map_parser.py  renderer.py  tile_factory.py  tile_renderer.py  vector_tile.py  water_tile.py
isoline/core/: game.py  isometric.py
isoline/graphics/: vector_renderer.py
isoline/tiles/: __init__.py  boxstack.py  forest.py  grass.py  lava.py  pyramid.py  sand.py  snow.py  wheat.py
isoline/utils/: mdmap_parser.py
maps/: default.mdmap  forest_grove.mdmap  grass.mdmap  grass_water.mdmap  lake.mdmap  large.mdmap  lava_test.mdmap  sandy_beach.mdmap  small_grass.mdmap  small_pyramid.mdmap  warehouse_district.mdmap  wheat_fields.mdmap  winter_wonderland.mdmap
todo/: srd.md  tile.md
