[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "isoline"
version = "0.1.0"
description = "Vector graphics isometric game engine built on pyglet"
authors = [
    {name = "Isoline Team"}
]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "pyglet>=2.0.0",
]

[project.scripts]
isoline = "isoline.main:main"

[tool.hatch.build.targets.wheel]
packages = ["isoline"]

[tool.hatch.build.targets.sdist]
include = [
    "isoline",
    "README.md",
]
